<resources>
    <string name="app_name">CSI</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="registerHere">Register Here</string>
    <string name="first_name">First Name</string>
    <string name="email">Email</string>
    <string name="last_name">Last Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_e_mail">Confirm E-mail</string>
    <string name="already_registered">Already Registered?  Login</string>
    <string name="register">Register</string>
    <string name="create_case">Create New Case </string>
    <string name="open_case">Open Existing Case </string>
    <string name="forgot_password">Forgot Password </string>
</resources>
