<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context="barbapplications.sft.RegistrationActivity">

    <EditText
        android:id="@+id/etFirstName"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="97dp"
        android:background="#11000000"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/first_name" />

    <EditText
        android:id="@+id/etLastName"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:layout_alignEnd="@+id/etFirstName"
        android:layout_alignRight="@+id/etFirstName"
        android:layout_below="@+id/etFirstName"
        android:layout_marginTop="16dp"
        android:background="#11000000"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/last_name" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:layout_alignLeft="@+id/etLastName"
        android:layout_alignStart="@+id/etLastName"
        android:layout_below="@+id/etLastName"
        android:layout_marginTop="16dp"
        android:background="#11000000"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/email" />

    <EditText
        android:id="@+id/etConfirmEmail"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:layout_alignLeft="@+id/etEmail"
        android:layout_alignStart="@+id/etEmail"
        android:layout_below="@+id/etEmail"
        android:layout_marginTop="16dp"
        android:background="#11000000"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/confirm_e_mail" />


    <EditText
        android:id="@+id/etuserName"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:ems="10"
        android:layout_alignLeft="@+id/etEmail"
        android:layout_alignStart="@+id/etEmail"
        android:layout_below="@+id/etConfirmEmail"
        android:layout_marginTop="16dp"
        android:background="#11000000"
        android:inputType="textPersonName"
        android:text="@string/username"/>
    <EditText
        android:id="@+id/etpassWord"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:ems="10"
        android:layout_alignLeft="@+id/etEmail"
        android:layout_alignStart="@+id/etEmail"
        android:layout_below="@+id/etuserName"
        android:layout_marginTop="16dp"
        android:background="#11000000"
        android:inputType="textPersonName"
        android:text="@string/password"/>
    <EditText
        android:id="@+id/etConfirmPW"
        android:layout_width="300dp"
        android:layout_height="25dp"
        android:ems="10"
        android:layout_alignLeft="@+id/etEmail"
        android:layout_alignStart="@+id/etEmail"
        android:layout_below="@+id/etpassWord"
        android:layout_marginTop="16dp"
        android:background="#11000000"
        android:inputType="textPersonName"
        android:text="@string/confirm_password"/>

    <android.support.v7.widget.CardView
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_below="@+id/etConfirmPW"
        android:layout_marginTop="80dp"
        android:layout_centerHorizontal="true"
        app:cardBackgroundColor="@android:color/black"
        app:cardCornerRadius="25dp"
        app:cardElevation="10dp">

        <RelativeLayout
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/register"
                android:textColor="#fff"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
